--- a/Reference manual.htm
+++ b/Reference manual.htm
@@ -202,7 +202,7 @@ Predicates that can be used by a program to check what tasks can call what other
 <code>[<b>TaskSubtask</b> <i>?task</i> <i>?call</i>]</code><br>True if task ?caller has a method that contains the call ?call.
 <p>
 <h2>StepRepl</h2>
-Tasks that control the behavior of StepRepl or whatever other game engine the Step code is running inside of.
+These tasks are defined by the StepRepl IDE.  To use them within a game not running inside StepRepl, you would need to copy their source into your game.
 <p>
 <code>[<b>EnvironmentOption</b> <i>argument</i> <i>...</i>]</code><br>Asks StepRepl or whatever other program this Step code is running in to change its handling of step code.
 <p>
