--- a/Built-in task reference.htm
+++ b/Built-in task reference.htm
@@ -228,7 +228,7 @@ Tasks for manipulating s-expression files.
 <code>[<b>ReadPddl</b> <i>filename</i> <i>?object</i>]</code><br>Reads filename.pddl and places the decoded data in ?object.
 <p>
 <h2>StepRepl</h2>
-These tasks are defined by the StepRepl IDE.  To use them within a game not running inside StepRepl, you would need to copy their source into your game.
+Tasks that control the behavior of StepRepl or whatever other game engine the Step code is running inside of.
 <p>
 <code>[<b>EnvironmentOption</b> <i>argument</i> <i>...</i>]</code><br>Asks StepRepl or whatever other program this Step code is running in to change its handling of step code.
 <p>
